--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 404 - Page not found
+title: 404 - Sayfa Bulunamadı
 permalink: /404.html
 ---
 
@@ -9,5 +9,9 @@ permalink: /404.html
   <h1>Move along. (404 error)</h1>
   <br/>
 
+  <h2>Kernel panic - not syncing: Attempted to kill the page!</h2>
+  <h3>Bailing out.</h3>
+  
+  <br/>
   <img src="{{ 'assets/img/404-southpark.jpg' | relative_url }}" alt="Not found" />
 </div>
