--- a/tags.html
+++ b/tags.html
@@ -3,7 +3,7 @@ layout: page
 title: 'Etiketler'
 ---
 
-{% assign date_format = site.date_format | default: "%B %-d, %Y" %}
+{% assign date_format = site.date_format | default: "%d %B %Y" %}
 
 {%- capture site_tags -%}
     {%- for tag in site.tags -%}
